--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)),
-    url(images/bg.jpg) center no-repeat;
+    url(images/fitness.jpg) center no-repeat;
   background-size: cover;
 }
 
@@ -93,7 +93,7 @@
 .modal {
   width: 350px;
   background: linear-gradient(rgba(148, 42, 42, 0.8), rgba(185, 129, 129, 0.6)),
-    url(images/bg.jpg) center no-repeat;
+    url(images/fitness.jpg) center no-repeat;
   background-size: cover;
   position: absolute;
   top: 60%;
